Create General Information component
Need to add style to this component.

--- a/src/main.css
+++ b/src/main.css
@@ -8,3 +8,11 @@
 body {
     background-color: #FFEAEA;
 }
+
+#root {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+
+    position: relative;
+}
