--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,7 +1,8 @@
 .nav {
     padding: 20px 40px;
+    background-color: #9ECAD6;
 
-    box-shadow: 1px 1px 32px  rgba(0, 0, 0, 0.5);
+    box-shadow: 8px 8px 8px -8px rgba(0, 0, 0, 0.5);
 }
 
 .nav > ul {
@@ -31,9 +32,8 @@ ul > li {
     border-radius: 50px;
     height: 100%;
 
-    box-shadow: 1px 1px 4px  rgba(0, 0, 0, 0.5);
+    box-shadow: 4px 4px 4px -4px rgba(0, 0, 0, 0.5);
 }
-
 
 .nav-btns > li > button:hover {
     cursor: pointer;
